--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,7 @@
 <app-header></app-header>
-<app-map></app-map>
-<app-table></app-table>
+<app-hero-section></app-hero-section>
+<app-features></app-features>
+<app-blog></app-blog>
+<!-- <app-map></app-map> -->
+<!-- <app-table></app-table> -->
 <app-footer></app-footer>
