--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,8 +1,7 @@
 <section class="bg-gray-50 dark:bg-gray-900">
     <div class="flex flex-col items-center justify-center px-6 py-8 mx-auto md:h-screen lg:py-0">
-        <a [routerLink]="['/']"   class="flex items-center mb-6 text-2xl font-semibold text-gray-900 dark:text-white">
-            <img  src="https://www.dlr-gfr.com/wp-content/uploads/2020/05/DLR-GFR_Logo_dark_web.png" alt="DLR-GfR Logo">
-                
+        <a href="#" class="flex items-center mb-6 text-2xl font-semibold text-gray-900 dark:text-white">
+            <img class="scale-75 hover:scale-90 transition-transform duration-200 mr-2" [src]="GFRLogo" alt="GfR Logo">
         </a>
         <div class="w-full bg-white rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800 dark:border-gray-700">
             <div class="p-6 space-y-4 md:space-y-6 sm:p-8">
@@ -19,7 +18,13 @@
                         <input type="password" name="password" id="password" placeholder="••••••••" class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" required="">
                     </div>
                     <div class="flex items-center justify-between">
+                       
                         <a href="#" class="text-sm font-medium text-primary-600 hover:underline dark:text-primary-500">Forgot password?</a>
+                    </div>
+                    <div class="flex items-center justify-center">
+                        <button type="button" class="text-white bg-gradient-to-br from-purple-600 to-blue-500 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 font-medium rounded-lg text-sm px-25 py-2.5 text-center">
+                            Sign In
+                        </button>
                     </div>
                     
                 </form>
