--- a/src/app/components/map/map.component.css
+++ b/src/app/components/map/map.component.css
@@ -1,1 +1,9 @@
-#map { height: 180px; }
+.map-container{
+    height: 400px;
+
+    #map{ 
+        height: 100%; 
+        width: 100%;
+    }
+}
+
