Map and Flowbite services

--- a/src/app/components/pages/product/product.component.html
+++ b/src/app/components/pages/product/product.component.html
@@ -1,5 +1,6 @@
 <app-header></app-header>
 <div class="border-4 border-red-500 h-[400px] w-full">
+    <app-map></app-map>
 </div>
 <app-table></app-table>
 <app-footer></app-footer>
