About-us, Contact-us, Footer links

--- a/src/app/components/page-sections/footer/footer.component.html
+++ b/src/app/components/page-sections/footer/footer.component.html
@@ -8,7 +8,7 @@
               <h6 class="mb-4 text-sm font-semibold uppercase text-gray-900 dark:text-white">Company</h6>
               <ul class="space-y-3">
                 <li>
-                  <a href="#" title="" class="text-gray-500 hover:text-gray-900 dark:text-gray-400 dark:hover:text-white"> About </a>
+                  <a [routerLink]="['/about-us']"title="" class="text-gray-500 hover:text-gray-900 dark:text-gray-400 dark:hover:text-white"> About </a>
                 </li>
               </ul>
             </div>
@@ -18,10 +18,10 @@
               <h6 class="mb-4 text-sm font-semibold uppercase text-gray-900 dark:text-white">Support & Services</h6>
               <ul class="space-y-3">
                 <li>
-                  <a href="#" title="" class="text-gray-500 hover:text-gray-900 dark:text-gray-400 dark:hover:text-white">Contact Support</a>
+                  <a [routerLink]="['/contact-us']" title="" class="text-gray-500 hover:text-gray-900 dark:text-gray-400 dark:hover:text-white">Contact Support</a>
                 </li>
                 <li>
-                  <a href="#" title="" class="text-gray-500 hover:text-gray-900 dark:text-gray-400 dark:hover:text-white">FAQs</a>
+                  <a [routerLink]="['/faqs']" title="" class="text-gray-500 hover:text-gray-900 dark:text-gray-400 dark:hover:text-white">FAQs</a>
                 </li>
                 <li>
                   <a href="#" title="" class="text-gray-500 hover:text-gray-900 dark:text-gray-400 dark:hover:text-white">Service Centers</a>
@@ -34,7 +34,7 @@
               <h6 class="mb-4 text-sm font-semibold uppercase text-gray-900 dark:text-white">Get Support</h6>
               <ul class="space-y-3">
                 <li>
-                  <a href="#" title="" class="text-gray-500 hover:text-gray-900 dark:text-gray-400 dark:hover:text-white">Contact Us</a>
+                  <a [routerLink]="['/contact-us']" title="" class="text-gray-500 hover:text-gray-900 dark:text-gray-400 dark:hover:text-white">Contact Us</a>
                 </li>
                 <li>
                   <a href="#" title="" class="text-gray-500 hover:text-gray-900 dark:text-gray-400 dark:hover:text-white">Technical Support</a>
