--- a/src/app/components/page-sections/hero-section/hero-section.component.html
+++ b/src/app/components/page-sections/hero-section/hero-section.component.html
@@ -6,7 +6,7 @@
             <h1 class="max-w-2xl mb-4 text-4xl font-extrabold tracking-tight leading-none md:text-5xl xl:text-6xl dark:text-white">Advanced Jamming & Spoofing Detection for Secure Aviation & Maritime Navigation</h1>
             <p class="max-w-2xl mb-6 font-light text-gray-500 lg:mb-8 md:text-lg lg:text-xl dark:text-gray-400">Real-time threat detection for GNSS-based navigation. Ensuring safety and reliability for aviation and maritime operations.</p>
             
-            <button [routerLink]="['/contact-us']"  type="button" class="text-white bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 shadow-lg shadow-blue-500/50 dark:shadow-lg dark:shadow-blue-800/80 font-medium rounded-lg text-sm px-5 py-2.5 inline-flex items-center ext-center">
+            <button [routerLink]="['/contact-us']"  type="button" class="text-white bg-gradient-to-r from-red-500 via-red-600 to-pink-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 shadow-lg shadow-blue-500/50 dark:shadow-lg dark:shadow-blue-800/80 font-medium rounded-lg text-sm px-5 py-2.5 inline-flex items-center ext-center">
                 Contact us
                 <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
                     <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
