--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -1,5 +1,6 @@
 <app-header></app-header>
 <app-hero-section></app-hero-section>
+<app-customers></app-customers>
 <app-features></app-features>
 <app-blog></app-blog>
 <!-- <app-map></app-map> -->
