--- a/src/app/components/page-sections/blog/blog.component.html
+++ b/src/app/components/page-sections/blog/blog.component.html
@@ -1,7 +1,7 @@
 <section class="bg-white dark:bg-gray-900">
     <div class="py-8 px-4 mx-auto max-w-screen-xl lg:py-16 lg:px-6">
         <div class="mx-auto max-w-screen-sm text-center mb-8 lg:mb-16">
-            <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white">Our Blog</h2>
+            <h2 id="blog-title" class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white">Our Blog</h2>
             <p class="font-light text-gray-500 sm:text-xl dark:text-gray-400">We use an agile approach to test assumptions and connect with the needs of your audience early and often.</p>
         </div> 
         <div class="grid gap-8 sm:grid-cols-2 lg:grid-cols-3">
