--- a/src/app/components/page-sections/footer/footer.component.html
+++ b/src/app/components/page-sections/footer/footer.component.html
@@ -45,14 +45,20 @@
   
           <div class="mt-6 w-full md:mt-8 lg:mt-0 lg:max-w-lg">
             <div class="space-y-5 rounded-lg bg-gray-50 p-6 dark:bg-gray-700">
-              <form action="#">
+              <form [formGroup]="subscribeToNewsLetterForm" (ngSubmit)="onSubscribe()">
                 <div class="items-end space-y-4 sm:flex sm:space-y-0">
                   <div class="relative mr-3 w-full sm:w-96 lg:w-full">
                     <label for="email" class="mb-2 block text-sm font-medium text-gray-900 dark:text-gray-300"> Don't miss the latest news. </label>
-                    <input [(ngModel)]="email" name="email" class="block w-full rounded-lg border border-gray-300 bg-white p-3 text-sm text-gray-900 focus:border-primary-500 focus:ring-primary-500 dark:border-gray-500 dark:bg-gray-600 dark:text-white dark:placeholder-gray-400 dark:focus:border-primary-500 dark:focus:ring-primary-500 sm:w-96 lg:w-full" placeholder="Enter your email address" type="email" id="email" required="" />
+                    <small *ngIf="subscribeToNewsLetterForm.get('email')?.errors?.['required'] && subscribeToNewsLetterForm.get('email')?.touched" class="text-red-500">
+                      Email is required.
+                    </small>
+                    <small *ngIf="subscribeToNewsLetterForm.get('email')?.errors?.['email'] && subscribeToNewsLetterForm.get('email')?.touched" class="text-red-500">
+                      The email is not valid.
+                    </small>
+                    <input formControlName="email" class="block w-full rounded-lg border border-gray-300 bg-white p-3 text-sm text-gray-900 focus:border-primary-500 focus:ring-primary-500 dark:border-gray-500 dark:bg-gray-600 dark:text-white dark:placeholder-gray-400 dark:focus:border-primary-500 dark:focus:ring-primary-500 sm:w-96 lg:w-full" placeholder="Enter your email address" type="email" id="email" required="" />
                   </div>
                   <div >
-                    <button (click)="onSubscribe()" type="submit" class="text-white bg-gradient-to-br from-red-500 via-red-600 to-pink-700 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 font-medium rounded-lg text-sm px-5 py-3 text-center">Subscribe</button>
+                    <button type="submit" class="text-white bg-gradient-to-br from-red-500 via-red-600 to-pink-700 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 font-medium rounded-lg text-sm px-5 py-3 text-center">Subscribe</button>
                   </div>
                 </div>
               </form>
