--- a/src/app/components/map/map.component.html
+++ b/src/app/components/map/map.component.html
@@ -1,1 +1,5 @@
-<div class="map" #map id="map" style="width: 100%; height: 100px"> </div>
+<div class="map-container">
+    <div id="map" class="jaspr-map"></div>
+</div>
+<app-map-options></app-map-options>
+  
