--- a/src/app/components/page-sections/header/header.component.html
+++ b/src/app/components/page-sections/header/header.component.html
@@ -5,6 +5,7 @@
                 <img [src]="GfRLogo" class="mr-3 h-6 sm:h-9" alt="DLR-GfR Logo" />
             </a>
             <div class="flex items-center lg:order-2">
+                <a [routerLink]="['/admin']" class="text-white bg-gradient-to-r from-red-500 via-red-600 to-pink-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2">Admin Dashboard</a>
                 <a [routerLink]="['/product']" class="text-white bg-gradient-to-r from-cyan-400 via-cyan-500 to-cyan-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-cyan-300 dark:focus:ring-cyan-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2" >Product</a>
                 <a [routerLink]="['/login']" class="text-white bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 dark:focus:ring-blue-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2">Log in</a>
                 <button  data-collapse-toggle="mobile-menu-2" type="button" class="inline-flex items-center p-2 ml-1 text-sm text-gray-500 rounded-lg lg:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="mobile-menu-2" aria-expanded="false">
