--- a/src/app/components/Map/map/map.component.html
+++ b/src/app/components/Map/map/map.component.html
@@ -1,5 +1,5 @@
 <div class="map-container">
     <div id="map" class="jaspr-map"></div>
 </div>
-<app-map-options></app-map-options>
+<app-map-options (filteredEventsChange)="onFilteredEventsChange($event)"></app-map-options>
   
