Map component update

--- a/src/app/components/Map/map-options/map-options.component.html
+++ b/src/app/components/Map/map-options/map-options.component.html
@@ -60,6 +60,7 @@
               <label for="jamming" class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-300">
                 Jamming
               </label>
+              <span class="flex ml-1 w-4 h-4 bg-yellow-300 me-1.5 shrink-0 hexagon-shape"></span>
             </div>
             
             <div class="flex items-center mr-4">
@@ -68,6 +69,7 @@
               <label for="spoofing" class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-300">
                 Spoofing
               </label>
+              <span class="flex ml-1 w-4 h-4 bg-red-600 me-1.5 shrink-0 hexagon-shape"></span>
             </div>
             
           </div>
