--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import "tailwindcss";
+
+
 @source "../node_modules/flowbite";
+@plugin "flowbite/plugin";
+/* @import "flowbite/src/themes/default"; */
