--- a/src/styles.css
+++ b/src/styles.css
@@ -4,4 +4,4 @@
 
 @source "../node_modules/flowbite";
 @plugin "flowbite/plugin";
-/* @import "flowbite/src/themes/default"; */
+/* @import "../node_modules/flowbite/dist/flowbite.css"; */
