--- a/src/app/components/Map/map-options/map-options.component.html
+++ b/src/app/components/Map/map-options/map-options.component.html
@@ -11,7 +11,7 @@
           </div>
         </div>
         <div class="grid w-full grid-cols-2 gap-4 pb-4 md:grid-cols-3 lg:grid-cols-2">
-          <div id="date-range-picker"   (focus)="onInputTouched()" class="flex items-center">
+          <div id="date-range-picker"  class="flex items-center">
             <div class="relative">
               <div class="absolute inset-y-0 start-0 flex items-center ps-3 pointer-events-none">
                   <svg class="w-4 h-4 text-gray-500 dark:text-gray-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
@@ -31,17 +31,21 @@
           </div>
           </div>
         <div class="flex items-center gap-4">
-          <button id="7-days" class="group relative inline-flex h-10 items-center justify-center overflow-hidden rounded-md border border-neutral-200 bg-transparent px-1 font-medium text-neutral-600 transition-all duration-100 [box-shadow:5px_5px_rgb(82_82_82)] active:translate-x-[3px] active:translate-y-[3px] active:[box-shadow:0px_0px_rgb(82_82_82)]" (click)="on7DaysClick()">
+          <button id="7-days" class="group relative inline-flex h-10 items-center justify-center overflow-hidden rounded-md border border-neutral-200 bg-transparent px-1 font-medium text-neutral-600 transition-all duration-10 [box-shadow:5px_5px_rgb(82_82_82)] active:translate-x-[3px] active:translate-y-[3px] active:[box-shadow:0px_0px_rgb(82_82_82)]" (click)="on7DaysClick()">
             Last 7 days
           </button>
 
-          <button id="14-days" class="group relative inline-flex h-10 items-center justify-center overflow-hidden rounded-md border border-neutral-200 bg-transparent px-1 font-medium text-neutral-600 transition-all duration-100 [box-shadow:5px_5px_rgb(82_82_82)] active:translate-x-[3px] active:translate-y-[3px] active:[box-shadow:0px_0px_rgb(82_82_82)]" (click)="on14DaysClick()">
+          <button id="14-days" class="group relative inline-flex h-10 items-center justify-center overflow-hidden rounded-md border border-neutral-200 bg-transparent px-1 font-medium text-neutral-600 transition-all duration-10 [box-shadow:5px_5px_rgb(82_82_82)] active:translate-x-[3px] active:translate-y-[3px] active:[box-shadow:0px_0px_rgb(82_82_82)]" (click)="on14DaysClick()">
             Last 14 days
           </button>
 
-          <button id="30-days" class="group relative inline-flex h-10 items-center justify-center overflow-hidden rounded-md border border-neutral-200 bg-transparent px-1 font-medium text-neutral-600 transition-all duration-100 [box-shadow:5px_5px_rgb(82_82_82)] active:translate-x-[3px] active:translate-y-[3px] active:[box-shadow:0px_0px_rgb(82_82_82)]" (click)="on30DaysClick()" >
+          <button id="30-days" class="group relative inline-flex h-10 items-center justify-center overflow-hidden rounded-md border border-neutral-200 bg-transparent px-1 font-medium text-neutral-600 transition-all duration-10 [box-shadow:5px_5px_rgb(82_82_82)] active:translate-x-[3px] active:translate-y-[3px] active:[box-shadow:0px_0px_rgb(82_82_82)]" (click)="on30DaysClick()" >
             Last 30 days
           </button>
+
+          <button data-modal-target="popup-modal" data-modal-toggle="popup-modal" class="group relative inline-flex h-10 items-center justify-center overflow-hidden rounded-md border border-neutral-200 bg-transparent px-1 font-medium text-neutral-600 transition-all duration-10 [box-shadow:5px_5px_rgb(82_82_82)] active:translate-x-[3px] active:translate-y-[3px] active:[box-shadow:0px_0px_rgb(82_82_82)]"type="button">
+            Run Filter
+            </button>
         </div>
 
 
@@ -55,25 +59,94 @@
               Show:
             </div>
             <div class="flex items-center mr-4">
-              <input id="jamming" type="checkbox" [checked]="jamming"  (change)="onCheckboxChange('jamming', $event)"
-                class="w-4 h-4 bg-gray-100 border-gray-300 text-primary-600 focus:ring-primary-500 dark:focus:ring-primary-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
+              <input
+                id="jamming"
+                type="checkbox"
+                [checked]="jamming"
+                (change)="onCheckboxChange('jamming', $event)"
+                class="w-4 h-4 bg-gray-100 border-gray-300 text-primary-600 focus:ring-primary-500 dark:focus:ring-primary-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600"
+              />
               <label for="jamming" class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-300">
                 Jamming
               </label>
               <span class="flex ml-1 w-4 h-4 bg-yellow-300 me-1.5 shrink-0 hexagon-shape"></span>
             </div>
-            
             <div class="flex items-center mr-4">
-              <input id="spoofing" type="checkbox" [checked]="spoofing"  (change)="onCheckboxChange('spoofing', $event)"
-                class="w-4 h-4 bg-gray-100 border-gray-300 text-primary-600 focus:ring-primary-500 dark:focus:ring-primary-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
+              <input
+                id="spoofing"
+                type="checkbox"
+                [checked]="spoofing"
+                (change)="onCheckboxChange('spoofing', $event)"
+                class="w-4 h-4 bg-gray-100 border-gray-300 text-primary-600 focus:ring-primary-500 dark:focus:ring-primary-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600"
+              />
               <label for="spoofing" class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-300">
                 Spoofing
               </label>
               <span class="flex ml-1 w-4 h-4 bg-red-600 me-1.5 shrink-0 hexagon-shape"></span>
             </div>
-            
           </div>
+          <div class="text-sm text-gray-900 dark:text-white">
+            <span class="ml-2 font-bold">Filter:</span>
+            <span *ngIf="jamming" class="ml-2">Jamming</span>
+            <span *ngIf="spoofing" class="ml-2">Spoofing</span>
+            <ng-container *ngIf="startDate">
+              <br>
+              <span class="ml-2 font-bold">Start:</span>
+              <span> {{ startDate }}</span>
+            </ng-container>
+            <ng-container *ngIf="endDate">
+              <br>
+              <span class="ml-2 font-bold">End:</span>
+              <span> {{ endDate }}</span>
+            </ng-container>
+          </div>
+          
+          
         </div>
+
+
+
+  
+  
+  
+        
+
+
+
+
+
+
       </div>
     </div>
   </section>
+  <div id="popup-modal" tabindex="-1" class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
+    <div class="relative p-4 w-full max-w-md max-h-full">
+        <div class="relative bg-white rounded-lg shadow-sm dark:bg-gray-700">
+            <button type="button" class="absolute top-3 end-2.5 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white" data-modal-hide="popup-modal">
+                <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
+                </svg>
+                <span class="sr-only">Close modal</span>
+            </button>
+            <div class="p-4 md:p-5 text-center">
+                <svg class="mx-auto mb-4 text-gray-400 w-12 h-12 dark:text-gray-200" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.529 9.988a2.502 2.502 0 1 1 5 .191A2.441 2.441 0 0 1 12 12.582V14m-.01 3.008H12M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"/>
+                </svg>
+                <h3 class="mb-5 text-lg font-normal text-gray-500 dark:text-gray-400">Are you sure you want to run this filter?</h3>
+                <div class="text-sm mb-5 font-nomal text-gray-500 dark:text-gray-400">
+                  Show:
+                  <span *ngIf="jamming" class="ml-2">Jamming</span>
+                  <span *ngIf="spoofing" class="ml-2">Spoofing</span>
+                  <br>
+                  <span *ngIf="startDate" class="ml-2">Start Date: {{ startDate }}</span>
+                  <span *ngIf="endDate" class="ml-2">End Date: {{ endDate }}</span>
+                </div>
+
+                <button (click)="onFilterConfirmed()" data-modal-hide="popup-modal" type="button" class="text-white bg-green-600 hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center">
+                    Yes, I'm sure
+                </button>
+                <button data-modal-hide="popup-modal" type="button" class="py-2.5 px-5 ms-3 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">No, cancel</button>
+            </div>
+        </div>
+    </div>
+</div>
