--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,7 @@
-/* @import "../node_modules/flowbite/src/themes/default.css"; */
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-/* @source "../node_modules/flowbite"; 
-@plugin "flowbite/plugin"; */
-
+@import "tailwindcss";
+@import "../node_modules/flowbite/src/themes/default.css";
+@plugin "flowbite/plugin";
+@source "../node_modules/flowbite";
+@source "../node_modules/flowbite-datepicker";
+@custom-variant dark (&:where(.dark, .dark *));
+@config "../tailwind.config.js";
