leaflet bug fixed

--- a/src/app/pages/admin-dashboard/users-table/users-table.component.html
+++ b/src/app/pages/admin-dashboard/users-table/users-table.component.html
@@ -76,7 +76,7 @@
                                     class="absolute z-10 max-w-[14rem] invisible inline-block px-3 py-2 text-sm font-medium text-white transition-opacity duration-300 bg-gray-900 rounded-lg shadow-sm opacity-0 tooltip dark:bg-gray-700">
                                     <h6 class="leading-none text-sm font-medium dark:text-white mb-1">Administrator</h6>
                                     <p class="leading-tight text-xs font-medium text-gray-500 dark:text-gray-400">
-                                        Administrators are responsible for managing the entire system.</p>
+                                        Administrators are responsible for managing the entire system. </p>
                                     <div class="tooltip-arrow" data-popper-arrow=""></div>
                                 </div>
                             </td>
@@ -85,7 +85,9 @@
                             </td>
                             <td class="px-4 py-3 font-medium text-gray-900 whitespace-nowrap dark:text-white">
                                 <div class="flex items-center">
-                                    <div class="h-3 w-3 bg-green-500 rounded-full mr-2"></div>
+                                    <div
+                                        class="h-3 w-3 bg-green-500 rounded-full mr-2">
+                                    </div>
                                     Active
                                 </div>
                             </td>
@@ -551,7 +553,8 @@
                     </div>
                 </div>
                 <div class="flex items-center space-x-4">
-                    <button [disabled]="createUserForm.invalid" type="submit" class="w-full text-white inline-flex items-center justify-center
+                    <button [disabled]="createUserForm.invalid" type="submit"
+                        class="w-full text-white inline-flex items-center justify-center
                          bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:outline-none
                           focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center
                            dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800 disabled:opacity-50">
