--- a/src/app/components/page-sections/header/header.component.html
+++ b/src/app/components/page-sections/header/header.component.html
@@ -1,79 +1,81 @@
 <header class="sticky top-0 z-10000">
-    <nav class="bg-white border-gray-200 px-4 lg:px-6 py-2.5 dark:bg-gray-800">
-      <div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-xl">
-        <a href="#" class="flex items-center">
-          <img [src]="GfRLogo" class="mr-3 h-6 sm:h-9 z-0" alt="DLR-GfR Logo" />
-        </a>
-        <div class="flex items-center lg:order-2">
-            <!-- Admin Dashboard -->
-            <a [routerLink]="['/admin']"
-            class="text-white bg-gradient-to-r from-red-500 via-red-600 to-pink-700 
+  <nav class="bg-white border-gray-200 px-4 lg:px-6 py-2.5 dark:bg-gray-800">
+    <div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-xl">
+      <a href="#" class="flex items-center">
+        <img [src]="GfRLogo" class="mr-3 h-6 sm:h-9 z-0" alt="DLR-GfR Logo" />
+      </a>
+      <div class="flex items-center lg:order-2">
+        <!-- Admin Dashboard -->
+        <a [routerLink]="['/admin']" class="text-white bg-gradient-to-r from-red-500 via-red-600 to-pink-700 
                     hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 
                     dark:focus:ring-blue-800 font-medium rounded-lg 
                     text-xs sm:text-sm px-3 sm:px-5 py-1 sm:py-2.5 text-center me-2 mb-2">
-            <!-- Visible on small screens -->
-            <span class="inline sm:hidden">Admin</span>
-            <!-- Visible on screens sm and up -->
-            <span class="hidden sm:inline">Admin Dashboard</span>
-            </a>
+          <!-- Visible on small screens -->
+          <span class="inline sm:hidden">Admin</span>
+          <!-- Visible on screens sm and up -->
+          <span class="hidden sm:inline">Admin Dashboard</span>
+        </a>
 
-            <!-- Product -->
-            <a [routerLink]="['/product']"
-            class="text-white bg-gradient-to-r from-cyan-400 via-cyan-500 to-cyan-600 
+        <!-- Product -->
+        <a [routerLink]="['/product']" class="text-white bg-gradient-to-r from-cyan-400 via-cyan-500 to-cyan-600 
                 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-cyan-300 
                 dark:focus:ring-cyan-800 font-medium rounded-lg 
                 text-xs sm:text-sm px-3 sm:px-5 py-1 sm:py-2.5 
                 text-center me-2 mb-2">
-            Events
-            </a>
+          Events
+        </a>
 
-            <!-- Log In (if not authenticated) -->
-            <a *ngIf="!authService.isAuthenticated()" [routerLink]="['/login']"
-            class="text-white bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 
+        <!-- Log In (if not authenticated) -->
+        <a *ngIf="!authService.isAuthenticated()" [routerLink]="['/login']" class="text-white bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700 
                 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 
                 dark:focus:ring-blue-800 font-medium rounded-lg 
                 text-xs sm:text-sm px-3 sm:px-5 py-1 sm:py-2.5 
                 text-center me-2 mb-2">
-            Log In
-            </a>
+          Log In
+        </a>
 
-            <!-- Log Out (if authenticated) -->
-            <div *ngIf="authService.isAuthenticated()" class="flex flex-col items-center p-2 sm:p-4">
-            <button (click)="onLogout()"
-                class="text-white bg-gradient-to-br from-red-300 via-red-500 to-red-700 
+        <!-- Log Out (if authenticated) -->
+        <div *ngIf="authService.isAuthenticated()" class="flex flex-col items-center p-2 sm:p-4">
+          <button (click)="onLogout()" class="text-white bg-gradient-to-br from-red-300 via-red-500 to-red-700 
                         hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-red-300 
                         dark:focus:ring-red-800 font-medium rounded-lg 
                         text-xs sm:text-sm px-3 sm:px-5 py-1 sm:py-2.5 
                         text-center me-2 mb-2">
             Log Out
             <div class="text-xs sm:text-sm font-medium text-gray-900 dark:text-white mt-1">
-            <span class="text-white font-bold">{{ timeRemaining }}</span>
+              <span class="text-white font-bold">{{ timeRemaining }}</span>
             </div>
-            </button>
-            </div>
-
-          
-  
-          <button (click)="toggleMenu()" type="button" class="inline-flex items-center p-2 ml-1 text-sm text-gray-500 rounded-lg lg:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600">
-            <span class="sr-only">Open main menu</span>
-            <svg *ngIf="!isMenuOpen" class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-              <path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path>
-            </svg>
-            <svg *ngIf="isMenuOpen" class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-              <path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path>
-            </svg>
           </button>
         </div>
-        <div [class.hidden]="!isMenuOpen" class="justify-between items-center w-full lg:flex lg:w-auto lg:order-1">
-          <ul class="flex flex-col mt-4 font-medium lg:flex-row lg:space-x-8 lg:mt-0">
-            <li><a [routerLink]="['/home']" class="block py-2 pr-4 pl-3 text-gray-700">Home</a></li>
-            <li><a href="#" class="block py-2 pr-4 pl-3 text-gray-700">Services</a></li>
-            <li><a [routerLink]="['/about-us']" class="block py-2 pr-4 pl-3 text-gray-700">About Us</a></li>
-            <li><a [routerLink]="['/contact-us']" class="block py-2 pr-4 pl-3 text-gray-700">Contact</a></li>
-          </ul>
-        </div>
+
+
+
+        <button (click)="toggleMenu()" type="button"
+          class="inline-flex items-center p-2 ml-1 text-sm text-gray-500 rounded-lg lg:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600">
+          <span class="sr-only">Open main menu</span>
+          <svg *ngIf="!isMenuOpen" class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20"
+            xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd"
+              d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
+              clip-rule="evenodd"></path>
+          </svg>
+          <svg *ngIf="isMenuOpen" class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20"
+            xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd"
+              d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+              clip-rule="evenodd"></path>
+          </svg>
+        </button>
       </div>
-    </nav>
-    <hr class="border-gray-200 dark:border-gray-600" />
-  </header>
-  
+      <div [class.hidden]="!isMenuOpen" class="justify-between items-center w-full lg:flex lg:w-auto lg:order-1">
+        <ul class="flex flex-col mt-4 font-medium lg:flex-row lg:space-x-8 lg:mt-0">
+          <li><a [routerLink]="['/home']" class="block py-2 pr-4 pl-3 text-gray-700">Home</a></li>
+          <li><a href="#" class="block py-2 pr-4 pl-3 text-gray-700">Services</a></li>
+          <li><a [routerLink]="['/about-us']" class="block py-2 pr-4 pl-3 text-gray-700">About Us</a></li>
+          <li><a [routerLink]="['/contact-us']" class="block py-2 pr-4 pl-3 text-gray-700">Contact</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <hr class="border-gray-200 dark:border-gray-600" />
+</header>
