Admin dashboard modals working

--- a/src/app/components/Map/map/map.component.html
+++ b/src/app/components/Map/map/map.component.html
@@ -2,4 +2,5 @@
     <div id="map" class="jaspr-map"></div>
 </div>
 <app-map-options (filteredEventsChange)="onFilteredEventsChange($event)"></app-map-options>
+<!-- <app-report></app-report> -->
   
