--- a/src/app/components/page-sections/header/header.component.html
+++ b/src/app/components/page-sections/header/header.component.html
@@ -69,10 +69,29 @@
       </div>
       <div [class.hidden]="!isMenuOpen" class="justify-between items-center w-full lg:flex lg:w-auto lg:order-1">
         <ul class="flex flex-col mt-4 font-medium lg:flex-row lg:space-x-8 lg:mt-0">
-          <li><a [routerLink]="['/home']" class="block py-2 pr-4 pl-3 text-gray-700">Home</a></li>
-          <li><a href="#" class="block py-2 pr-4 pl-3 text-gray-700">Services</a></li>
-          <li><a [routerLink]="['/about-us']" class="block py-2 pr-4 pl-3 text-gray-700">About Us</a></li>
-          <li><a [routerLink]="['/contact-us']" class="block py-2 pr-4 pl-3 text-gray-700">Contact</a></li>
+          <li>
+            <a [routerLink]="['/home']" routerLinkActive="active-link"
+              class="block py-2 pr-4 pl-3 text-gray-700 hover:text-blue-600 transition-colors">
+              Home
+            </a>
+          </li>
+          <li>
+            <a href="#" class="block py-2 pr-4 pl-3 text-gray-700 hover:text-blue-600 transition-colors">
+              Services
+            </a>
+          </li>
+          <li>
+            <a [routerLink]="['/about-us']" routerLinkActive="active-link"
+              class="block py-2 pr-4 pl-3 text-gray-700 hover:text-blue-600 transition-colors">
+              About Us
+            </a>
+          </li>
+          <li>
+            <a [routerLink]="['/contact-us']" routerLinkActive="active-link"
+              class="block py-2 pr-4 pl-3 text-gray-700 hover:text-blue-600 transition-colors">
+              Contact
+            </a>
+          </li>
         </ul>
       </div>
     </div>
