blogs added + dynamic datatables

--- a/src/app/components/page-sections/blog/blog.component.html
+++ b/src/app/components/page-sections/blog/blog.component.html
@@ -6,12 +6,12 @@
         </div> 
         <div class="grid gap-8 sm:grid-cols-2 lg:grid-cols-3">
             <article class="p-4 bg-white rounded-lg border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700">
-                <a href="#">
+                <a [routerLink]="['/blogs', 'blog-1']"  >
                     <img class="mb-5 rounded-lg" src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/blog/office-laptops.png" alt="office laptop working">
                 </a>
                 <span class="bg-purple-100 text-purple-800 text-xs font-semibold mr-2 px-2.5 py-0.5 rounded dark:bg-purple-200 dark:text-purple-900">Article</span>
                 <h2 class="my-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
-                    <a href="#">Our first office</a>
+                    <a [routerLink]="['/blogs', 'blog-1']" >Our first office</a>
                 </h2>
                 <p class="mb-4 font-light text-gray-500 dark:text-gray-400">Over the past year, Volosoft has undergone many changes! After months of preparation and some hard work, we moved to our new office.</p>
                 <div class="flex items-center space-x-4">
@@ -23,12 +23,12 @@
                 </div>
             </article>
             <article class="p-4 bg-white rounded-lg border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700">
-                <a href="#">
+                <a [routerLink]="['/blogs', 'blog-2']">
                     <img class="mb-5 rounded-lg" src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/blog/google-hq.png" alt="Google HQ">
                 </a>
                 <span class="bg-purple-100 text-purple-800 text-xs font-semibold mr-2 px-2.5 py-0.5 rounded dark:bg-purple-200 dark:text-purple-900">Article</span>
                 <h2 class="my-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
-                    <a href="#">We partnered up with Google</a>
+                    <a [routerLink]="['/blogs', 'blog-2']">We partnered up with Google</a>
                 </h2>
                 <p class="mb-4 font-light text-gray-500 dark:text-gray-400">Over the past year, Volosoft has undergone many changes! After months of preparation and some hard work, we moved to our new office.</p>
                 <div class="flex items-center space-x-4">
@@ -40,12 +40,12 @@
                 </div>
             </article>
             <article class="p-4 bg-white rounded-lg border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700">
-                <a href="#">
+                <a [routerLink]="['/blogs', 'blog-3']">
                     <img class="mb-5 rounded-lg" src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/blog/office-laptops-2.png" alt="office laptops">
                 </a>
                 <span class="bg-purple-100 text-purple-800 text-xs font-semibold mr-2 px-2.5 py-0.5 rounded dark:bg-purple-200 dark:text-purple-900">Article</span>
                 <h2 class="my-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
-                    <a href="#">Our first project with React</a>
+                    <a [routerLink]="['/blogs', 'blog-3']">Our first project with React</a>
                 </h2>
                 <p class="mb-4 font-light text-gray-500 dark:text-gray-400">Over the past year, Volosoft has undergone many changes! After months of preparation and some hard work, we moved to our new office.</p>
                 <div class="flex items-center space-x-4">
